--- a/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
@@ -2,16 +2,51 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "73"
+       "[['%AST', 18, 7],\n",
+       " ['%OREB', 92, 82],\n",
+       " ['%DREB', 91, 76],\n",
+       " ['%STL', 33, 32],\n",
+       " ['%BLK', 92, 87],\n",
+       " ['%BLK', 92, 87],\n",
+       " ['FREQ_6', 95, 45],\n",
+       " ['Diff%_6', 99, 74],\n",
+       " ['FREQ_15', 6, 59],\n",
+       " ['Diff%_15', 5, 60],\n",
+       " ['Freq_Handoff_Off', 17, 73],\n",
+       " ['eFG%_Handoff_Off', 9, 81],\n",
+       " ['Freq_Iso_Def', 73, 2],\n",
+       " ['eFG%_Iso_Def', 75, 40],\n",
+       " ['Freq_Iso_Off', 50, 30],\n",
+       " ['eFG%_Iso_Off', 98, 63],\n",
+       " ['Freq_Iso_Off', 19, 14],\n",
+       " ['eFG%_OffScreen_Off', 15, 5],\n",
+       " ['Freq_P&R_Handler_Off', 11, 14],\n",
+       " ['eFG%_P&R_Handler_Off', 34, 11],\n",
+       " ['Freq_P&R_Man_Off', 88, 2],\n",
+       " ['eFG%_P&R_Man_Off', 92, 7],\n",
+       " ['Freq_Postup_Off', 94, 89],\n",
+       " ['eFG%_Postup_Off', 92, 77],\n",
+       " ['Freq_Putbacks_Off', 91, 66],\n",
+       " ['eFG%_Putbacks_Off', 91, 56],\n",
+       " ['Freq_Spotup_Off', 15, 55],\n",
+       " ['eFG%_Spotup_Off', 38, 27],\n",
+       " ['Freq_Tight', 95, 90],\n",
+       " ['eFG%_Tight', 97, 82],\n",
+       " ['Freq_Open', 10, 75],\n",
+       " ['eFG%_Open', 85, 10],\n",
+       " ['FGA_Catch_And_Shoot', 12, 68],\n",
+       " ['EFG%_Catch_And_Shoot', 12, 53],\n",
+       " ['FGA_Pull_Up', 13, 3],\n",
+       " ['EFG%_Pull_Up', 83, 58]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,35 +62,224 @@
     "\n",
     "the_master_dic = {}\n",
     "\n",
-    "AST_Precentage = input(\"Your %AST: \")\n",
-    "OREB_Precentage = input(\"Your %OREB: \")\n",
-    "DREB_Precentage = input(\"Your %DREB: \")\n",
-    "STL_Precentage = input(\"Your %STL: \")\n",
-    "BLK_Precentage = input(\"Your %BLK: \")\n",
+    "AST_Precentage = input(\"Your %AST precentile: \")\n",
+    "OREB_Precentage = input(\"Your %OREB precentile: \")\n",
+    "DREB_Precentage = input(\"Your %DREB precentile: \")\n",
+    "STL_Precentage = input(\"Your %STL precentile: \")\n",
+    "BLK_Precentage = input(\"Your %BLK precentile: \")\n",
+    "Freq_6 = input(\"Your Freq_6 precentile: \")\n",
+    "Diff_6 = input(\"Your Diff_6 precentile: \")\n",
+    "Freq_15 = input(\"Your Freq_15 precentile: \")\n",
+    "Diff_15 = input(\"Your Diff_15 precentile: \")\n",
+    "Handoff_Freq_Off = input('Your Handoff Freq Off precentile: ')\n",
+    "Handoff_eFG_Off = input('Your Handoff eFG Off precentile: ')\n",
+    "Iso_Freq_Def = input('Your Iso Freq Def precentile: ')\n",
+    "Iso_eFG_Def = input('Your Iso eFG Def precentile: ')\n",
+    "Iso_Freq_Off = input('Your Iso Freq Off precentile: ')\n",
+    "Iso_eFG_Off = input('Your Iso eFG Off precentile: ')\n",
+    "OffScreen_Freq_Off = input('Your OffScreen Freq precentile: ')\n",
+    "OffScreen_eFG_Off = input('Your OffScreen EFG precentile: ')\n",
+    "PR_Handler_Freq_Off = input('Your P&R Handler Freq Off precentile: ')\n",
+    "PR_Handler_eFG_Off = input('Your P&R Handler eFG Off precentile: ')\n",
+    "PR_Man_Freq_Off = input('Your P&R Man Freq Off precentile: ')\n",
+    "PR_Man_eFG_Off = input('Your P&R Man eFG Off precentile: ')\n",
+    "Postup_Freq_Off = input('Your Postup Freq Off precentile: ')\n",
+    "Postup_eFG_Off = input('Your Postup eFG Off precentile: ')\n",
+    "Putbacks_Freq_Off = input('Your Putbacks Freq Off precentile: ')\n",
+    "Putbacks_eFG_Off = input('Your Putbacks eFG Off precentile: ')\n",
+    "Spotup_Freq_Off = input('Your Spotup Freq Off precentile: ')\n",
+    "Spotup_eFG_Off = input('Your Spotup eFG Off precentile: ')\n",
+    "Tight_Freq = input('Your Tight Freq precentile: ')\n",
+    "Tight_eFG = input('Your Tight eFG precentile: ')\n",
+    "Open_Freq = input('Your Open Freq precentile: ')\n",
+    "Open_eFG = input('Your Open eFG precentile: ')\n",
+    "Catch_And_Shoot_FGA = input('Your Catch and Shoot Freq precentile: ')\n",
+    "Catch_And_Shoot_eFG = input('Your Catch and Shoot eFG precentile: ')\n",
+    "Pull_Up_FGA = input('Your Pull Up Freq precentile: ')\n",
+    "Pull_Up_eFG = input('Your Pull Up eFG precentile: ')\n",
+    "#Drives????\n",
+    "\n",
     "\n",
     "for i in range(0,351):\n",
     "    the_master_dic[str(df['Player'].iloc[i])] = []\n",
-    "    the_master_dic[str(df['Player'].iloc[i])].append(['%AST', round((i/351)*100), round(abs(int(x) - (i/351)*100))])\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['%AST', round((i/351)*100), round(abs(int(AST_Precentage) - (i/351)*100))])\n",
     "\n",
     "df = basketball.sort_values('%OREB', ascending=True)\n",
     "for i in range(0,351):\n",
-    "    the_master_dic[str(df['Player'].iloc[i])].append(['%OREB', round((i/351)*100), round(abs(int(x) - (i/351)*100))])\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['%OREB', round((i/351)*100), round(abs(int(OREB_Precentage) - (i/351)*100))])\n",
     "\n",
     "df = basketball.sort_values('%DREB', ascending=True)\n",
     "for i in range(0,351):\n",
-    "    the_master_dic[str(df['Player'].iloc[i])].append(['%DREB', round((i/351)*100), round(abs(int(x) - (i/351)*100))])\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['%DREB', round((i/351)*100), round(abs(int(DREB_Precentage) - (i/351)*100))])\n",
     "\n",
     "df = basketball.sort_values('%STL', ascending=True)\n",
     "for i in range(0,351):\n",
-    "    the_master_dic[str(df['Player'].iloc[i])].append(['%STL', round((i/351)*100), round(abs(int(x) - (i/351)*100))])\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['%STL', round((i/351)*100), round(abs(int(STL_Precentage) - (i/351)*100))])\n",
     "\n",
     "df = basketball.sort_values('%BLK', ascending=True)\n",
     "for i in range(0,351):\n",
-    "    the_master_dic[str(df['Player'].iloc[i])].append(['%BLK', round((i/351)*100), round(abs(int(x) - (i/351)*100))])\n",
-    "    \n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['%BLK', round((i/351)*100), round(abs(int(BLK_Precentage) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('FREQ_6', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['FREQ_6', round((i/351)*100), round(abs(int(Freq_6) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Diff%_6', ascending=False)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Diff%_6', round((i/351)*100), round(abs(int(Diff_6) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('FREQ_15', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['FREQ_15', round((i/351)*100), round(abs(int(Freq_15) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Diff%_15', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Diff%_15', round((i/351)*100), round(abs(int(Diff_15) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Handoff_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Handoff_Off', round((i/351)*100), round(abs(int(Handoff_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Handoff_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Handoff_Off', round((i/351)*100), round(abs(int(Handoff_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Iso_Def', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Iso_Def', round((i/351)*100), round(abs(int(Iso_Freq_Def) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Iso_Def', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Iso_Def', round((i/351)*100), round(abs(int(Iso_eFG_Def) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Iso_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Iso_Off', round((i/351)*100), round(abs(int(Iso_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Iso_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Iso_Off', round((i/351)*100), round(abs(int(Iso_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_OffScreen_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Iso_Off', round((i/351)*100), round(abs(int(OffScreen_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_OffScreen_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_OffScreen_Off', round((i/351)*100), round(abs(int(OffScreen_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_P&R_Handler_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_P&R_Handler_Off', round((i/351)*100), round(abs(int(PR_Handler_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_P&R_Handler_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_P&R_Handler_Off', round((i/351)*100), round(abs(int(PR_Handler_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_P&R_Man_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_P&R_Man_Off', round((i/351)*100), round(abs(int(PR_Man_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_P&R_Man_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_P&R_Man_Off', round((i/351)*100), round(abs(int(PR_Man_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Postup_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Postup_Off', round((i/351)*100), round(abs(int(Postup_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Postup_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Postup_Off', round((i/351)*100), round(abs(int(Postup_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Putbacks_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Putbacks_Off', round((i/351)*100), round(abs(int(Putbacks_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Putbacks_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Putbacks_Off', round((i/351)*100), round(abs(int(Putbacks_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Spotup_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Spotup_Off', round((i/351)*100), round(abs(int(Spotup_Freq_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Spotup_Off', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Spotup_Off', round((i/351)*100), round(abs(int(Spotup_eFG_Off) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Tight', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Tight', round((i/351)*100), round(abs(int(Tight_Freq) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Tight', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Tight', round((i/351)*100), round(abs(int(Tight_eFG) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('Freq_Open', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['Freq_Open', round((i/351)*100), round(abs(int(Open_Freq) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('eFG%_Open', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['eFG%_Open', round((i/351)*100), round(abs(int(Open_eFG) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('FGA_Catch_And_Shoot', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['FGA_Catch_And_Shoot', round((i/351)*100), round(abs(int(Catch_And_Shoot_FGA) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('EFG%_Catch_And_Shoot', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['EFG%_Catch_And_Shoot', round((i/351)*100), round(abs(int(Catch_And_Shoot_eFG) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('FGA_Pull_Up', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['FGA_Pull_Up', round((i/351)*100), round(abs(int(Pull_Up_FGA) - (i/351)*100))])\n",
+    "\n",
+    "df = basketball.sort_values('EFG%_Pull_Up', ascending=True)\n",
+    "for i in range(0,351):\n",
+    "    the_master_dic[str(df['Player'].iloc[i])].append(['EFG%_Pull_Up', round((i/351)*100), round(abs(int(Pull_Up_eFG) - (i/351)*100))])\n",
+    "\n",
     "#print(the_master_dic)\n",
     "\n",
-    "the_master_dic['Joel Embiid'][2][2]\n",
+    "the_master_dic['Jarrett Allen']\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'the_master_dic' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-99edbdd9093e>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m     \u001b[0msimilarity\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m36\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m         \u001b[0msimilarity\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0mthe_master_dic\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbasketball\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Player'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m     \u001b[0msimilarity_score\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbasketball\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Player'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0miloc\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msimilarity\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m36\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'the_master_dic' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from operator import itemgetter\n",
+    "\n",
+    "similarity_score = {}\n",
+    "K = 25\n",
+    "for i in range(0,351):\n",
+    "    similarity = 0\n",
+    "    for j in range(0,36):\n",
+    "        similarity += the_master_dic[str(basketball['Player'].iloc[i])][j][2]\n",
+    "    similarity_score[str(basketball['Player'].iloc[i])] = (similarity/36)\n",
+    "\n",
+    "similarity_score_25 = dict(sorted(similarity_score.items(), key = itemgetter(1))[:K])\n",
+    "print(similarity_score_25)\n",
+    "the_master_dic[str(min(similarity_score, key=similarity_score.get))]\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -63,10 +287,10 @@
  ],
  "metadata": {
   "interpreter": {
-   "hash": "41a8ddd2040355ff42863a73dcd9d3d11bbe5ae968273a3b57ccd6e5b2a5c4dc"
+   "hash": "ac59ebe37160ed0dfa835113d9b8498d9f09ceb179beaac4002f036b9467c963"
   },
   "kernelspec": {
-   "display_name": "Python 3.10.4 64-bit (windows store)",
+   "display_name": "Python 3.9.2 64-bit",
    "language": "python",
    "name": "python3"
   },
