First Weight Attempt

--- a/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -268,43 +268,43 @@
     {
      "data": {
       "text/plain": [
-       "[['%AST', 25, 15],\n",
-       " ['%OREB', 46, -19],\n",
-       " ['%DREB', 15, 8],\n",
-       " ['%STL', 50, 21],\n",
-       " ['%BLK', 46, -41],\n",
-       " ['FREQ_6', 51, 14],\n",
-       " ['Diff%_6', 32, 3],\n",
-       " ['FREQ_15', 54, 21],\n",
-       " ['Diff%_15', 58, -3],\n",
-       " ['Freq_Handoff_Off', 48, 27],\n",
-       " ['eFG%_Handoff_Off', 88, -29],\n",
-       " ['Freq_Iso_Def', 33, 34],\n",
-       " ['eFG%_Iso_Def', 50, -4],\n",
-       " ['Freq_Iso_Off', 43, -28],\n",
-       " ['eFG%_Iso_Off', 44, -19],\n",
-       " ['Freq_OffScreen_Off', 90, -88],\n",
-       " ['eFG%_OffScreen_Off', 70, -55],\n",
-       " ['Freq_P&R_Handler_Off', 48, -18],\n",
-       " ['eFG%_P&R_Handler_Off', 93, -68],\n",
-       " ['Freq_P&R_Man_Off', 65, 22],\n",
-       " ['eFG%_P&R_Man_Off', 97, -28],\n",
-       " ['Freq_Postup_Off', 67, -55],\n",
-       " ['eFG%_Postup_Off', 99, -75],\n",
-       " ['Freq_Putbacks_Off', 55, -47],\n",
-       " ['eFG%_Putbacks_Off', 40, -10],\n",
-       " ['Freq_Spotup_Off', 81, -11],\n",
-       " ['eFG%_Spotup_Off', 72, -17],\n",
-       " ['Freq_Tight', 36, -21],\n",
-       " ['eFG%_Tight', 89, -79],\n",
-       " ['Freq_Open', 77, 8],\n",
-       " ['eFG%_Open', 76, -14],\n",
-       " ['FGA_Catch_And_Shoot', 73, -8],\n",
-       " ['EFG%_Catch_And_Shoot', 67, -17],\n",
-       " ['FGA_Pull_Up', 70, -45],\n",
-       " ['EFG%_Pull_Up', 81, -61],\n",
-       " ['DRIVES_Drives', 64, -19],\n",
-       " ['FG%_Drives', 92, -52]]"
+       "[['%AST', 25, 7],\n",
+       " ['%OREB', 46, -10],\n",
+       " ['%DREB', 15, 23],\n",
+       " ['%STL', 50, 34],\n",
+       " ['%BLK', 46, -38],\n",
+       " ['FREQ_6', 51, 4],\n",
+       " ['Diff%_6', 32, 0],\n",
+       " ['FREQ_15', 54, 33],\n",
+       " ['Diff%_15', 58, 15],\n",
+       " ['Freq_Handoff_Off', 48, 14],\n",
+       " ['eFG%_Handoff_Off', 88, -33],\n",
+       " ['Freq_Iso_Def', 33, 20],\n",
+       " ['eFG%_Iso_Def', 50, -13],\n",
+       " ['Freq_Iso_Off', 43, -13],\n",
+       " ['eFG%_Iso_Off', 44, -3],\n",
+       " ['Freq_OffScreen_Off', 90, -83],\n",
+       " ['eFG%_OffScreen_Off', 70, -48],\n",
+       " ['Freq_P&R_Handler_Off', 48, -17],\n",
+       " ['eFG%_P&R_Handler_Off', 93, -64],\n",
+       " ['Freq_P&R_Man_Off', 65, 17],\n",
+       " ['eFG%_P&R_Man_Off', 97, -30],\n",
+       " ['Freq_Postup_Off', 67, -44],\n",
+       " ['eFG%_Postup_Off', 99, -64],\n",
+       " ['Freq_Putbacks_Off', 55, -21],\n",
+       " ['eFG%_Putbacks_Off', 40, 7],\n",
+       " ['Freq_Spotup_Off', 81, 7],\n",
+       " ['eFG%_Spotup_Off', 72, -13],\n",
+       " ['Freq_Tight', 36, -12],\n",
+       " ['eFG%_Tight', 89, -58],\n",
+       " ['Freq_Open', 77, 17],\n",
+       " ['eFG%_Open', 76, -15],\n",
+       " ['FGA_Catch_And_Shoot', 73, 3],\n",
+       " ['EFG%_Catch_And_Shoot', 67, -5],\n",
+       " ['FGA_Pull_Up', 70, -49],\n",
+       " ['EFG%_Pull_Up', 81, -48],\n",
+       " ['DRIVES_Drives', 64, -23],\n",
+       " ['FG%_Drives', 92, -55]]"
       ]
      },
      "execution_count": 11,
@@ -333,60 +333,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jevon Carter': 21, 'Jae Crowder': 22, 'Josh Green': 22, 'Reggie Bullock': 22, 'Robert Covington': 22, 'Dean Wade': 23, 'Frank Jackson': 23, 'Frank Ntilikina': 23, 'Justin Holiday': 23, \"Royce O'Neale\": 23}\n",
+      "{'Jae Crowder': 21, 'Josh Green': 21, 'Robert Covington': 21, 'Cameron Johnson': 22, 'Cody Martin': 22}\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['%AST', 82, -42],\n",
-       " ['%OREB', 2, 25],\n",
-       " ['%DREB', 23, 0],\n",
-       " ['%STL', 20, 51],\n",
-       " ['%BLK', 5, 0],\n",
-       " ['FREQ_6', 5, 60],\n",
-       " ['Diff%_6', 2, 33],\n",
-       " ['FREQ_15', 92, -17],\n",
-       " ['Diff%_15', 47, 8],\n",
-       " ['Freq_Handoff_Off', 87, -12],\n",
-       " ['eFG%_Handoff_Off', 68, -9],\n",
-       " ['Freq_Iso_Def', 26, 41],\n",
-       " ['eFG%_Iso_Def', 89, -43],\n",
-       " ['Freq_Iso_Off', 1, 14],\n",
-       " ['eFG%_Iso_Off', 1, 24],\n",
-       " ['Freq_OffScreen_Off', 93, -91],\n",
-       " ['eFG%_OffScreen_Off', 79, -64],\n",
-       " ['Freq_P&R_Handler_Off', 81, -51],\n",
-       " ['eFG%_P&R_Handler_Off', 98, -73],\n",
-       " ['Freq_P&R_Man_Off', 21, 66],\n",
-       " ['eFG%_P&R_Man_Off', 5, 64],\n",
-       " ['Freq_Postup_Off', 4, 8],\n",
-       " ['eFG%_Postup_Off', 0, 24],\n",
-       " ['Freq_Putbacks_Off', 14, -6],\n",
-       " ['eFG%_Putbacks_Off', 14, 16],\n",
-       " ['Freq_Spotup_Off', 71, -1],\n",
-       " ['eFG%_Spotup_Off', 47, 8],\n",
-       " ['Freq_Tight', 5, 10],\n",
-       " ['eFG%_Tight', 81, -71],\n",
-       " ['Freq_Open', 74, 11],\n",
-       " ['eFG%_Open', 38, 24],\n",
-       " ['FGA_Catch_And_Shoot', 67, -2],\n",
-       " ['EFG%_Catch_And_Shoot', 54, -4],\n",
-       " ['FGA_Pull_Up', 60, -35],\n",
-       " ['EFG%_Pull_Up', 62, -42],\n",
-       " ['DRIVES_Drives', 60, -15],\n",
-       " ['FG%_Drives', 96, -56]]"
+       "[['%AST', 24, 8],\n",
+       " ['%OREB', 25, 11],\n",
+       " ['%DREB', 72, -34],\n",
+       " ['%STL', 86, -2],\n",
+       " ['%BLK', 62, -54],\n",
+       " ['FREQ_6', 34, 21],\n",
+       " ['Diff%_6', 23, 9],\n",
+       " ['FREQ_15', 65, 22],\n",
+       " ['Diff%_15', 64, 9],\n",
+       " ['Freq_Handoff_Off', 60, 2],\n",
+       " ['eFG%_Handoff_Off', 48, 7],\n",
+       " ['Freq_Iso_Def', 58, -5],\n",
+       " ['eFG%_Iso_Def', 60, -23],\n",
+       " ['Freq_Iso_Off', 13, 17],\n",
+       " ['eFG%_Iso_Off', 13, 28],\n",
+       " ['Freq_OffScreen_Off', 87, -80],\n",
+       " ['eFG%_OffScreen_Off', 85, -63],\n",
+       " ['Freq_P&R_Handler_Off', 49, -18],\n",
+       " ['eFG%_P&R_Handler_Off', 94, -65],\n",
+       " ['Freq_P&R_Man_Off', 69, 13],\n",
+       " ['eFG%_P&R_Man_Off', 75, -8],\n",
+       " ['Freq_Postup_Off', 13, 10],\n",
+       " ['eFG%_Postup_Off', 13, 22],\n",
+       " ['Freq_Putbacks_Off', 38, -4],\n",
+       " ['eFG%_Putbacks_Off', 39, 8],\n",
+       " ['Freq_Spotup_Off', 95, -7],\n",
+       " ['eFG%_Spotup_Off', 67, -8],\n",
+       " ['Freq_Tight', 8, 16],\n",
+       " ['eFG%_Tight', 14, 17],\n",
+       " ['Freq_Open', 93, 1],\n",
+       " ['eFG%_Open', 56, 5],\n",
+       " ['FGA_Catch_And_Shoot', 93, -17],\n",
+       " ['EFG%_Catch_And_Shoot', 54, 8],\n",
+       " ['FGA_Pull_Up', 60, -39],\n",
+       " ['EFG%_Pull_Up', 51, -18],\n",
+       " ['DRIVES_Drives', 31, 10],\n",
+       " ['FG%_Drives', 86, -49]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,18 +395,40 @@
     "from operator import itemgetter\n",
     "\n",
     "similarity_score = {}\n",
-    "K = 10\n",
+    "K = 5\n",
+    "\n",
     "for i in range(0,351):\n",
     "    similarity = 0\n",
-    "    for j in range(0,37):\n",
-    "        similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][j][2])\n",
+    "    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][0][2]) * 2 #AST\n",
+    "    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][1][2]) * 1.2 #OREB\n",
+    "    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][2][2])  * 1.5 #DREB\n",
+    "    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][3][2]) * 1.1 #STL\n",
+    "    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][4][2]) * 1.1 #BLK\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][5][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][6][2])) * 2 #6\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][7][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][8][2])) * 2 #15\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][9][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][10][2])) * 0.7 #Handoff\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][11][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][12][2])) * 2 #Iso_Def\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][13][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][14][2])) * 1 #Iso_Off\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][15][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][16][2])) * 0.7 #Offscreen\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][17][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][18][2])) * 1 #PR Handler\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][19][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][20][2])) * 1 #PR Man\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][21][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][22][2])) * 0.9 #Post Up\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][23][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][24][2])) * 0.7 #Putbacks\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][25][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][26][2])) * 0.6 #Spot Up\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][27][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][28][2])) * 1 #Tight\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][29][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][30][2])) * 1 #Open\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][31][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][32][2])) * 0.6 #Catch and Shoot\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][33][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][34][2])) * 1 #Pull Up\n",
+    "    similarity += (abs(the_master_dic[str(basketball['Player'].iloc[i])][35][2]) + abs(the_master_dic[str(basketball['Player'].iloc[i])][36][2])) * 1 #Drives\n",
+    "    #for j in range(0,37):\n",
+    "    #    similarity += abs(the_master_dic[str(basketball['Player'].iloc[i])][j][2])\n",
     "    similarity_score[str(basketball['Player'].iloc[i])] = round(similarity/37)\n",
     "\n",
     "# the_master_dic[str(min(similarity_score, key=similarity_score.get))]\n",
-    "similarity_score_10 = dict(sorted(similarity_score.items(), key = itemgetter(1))[:K])\n",
-    "print(similarity_score_10)\n",
+    "similarity_score_5 = dict(sorted(similarity_score.items(), key = itemgetter(1))[:K])\n",
+    "print(similarity_score_5)\n",
     "print('')\n",
-    "the_master_dic['Joe Ingles']\n",
+    "the_master_dic['Jae Crowder']\n",
     "\n",
     "\n"
    ]
