JavaScript JSON anaylsis

--- a/Pickup_Comps_Inner/Dataframes/final_python.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/final_python.ipynb
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -347,46 +347,46 @@
     {
      "data": {
       "text/plain": [
-       "[['%AST', 24, 8],\n",
-       " ['%OREB', 25, 11],\n",
-       " ['%DREB', 72, -34],\n",
-       " ['%STL', 86, -2],\n",
-       " ['%BLK', 62, -54],\n",
-       " ['FREQ_6', 34, 21],\n",
-       " ['Diff%_6', 23, 9],\n",
-       " ['FREQ_15', 65, 22],\n",
-       " ['Diff%_15', 64, 9],\n",
-       " ['Freq_Handoff_Off', 60, 2],\n",
-       " ['eFG%_Handoff_Off', 48, 7],\n",
-       " ['Freq_Iso_Def', 58, -5],\n",
-       " ['eFG%_Iso_Def', 60, -23],\n",
-       " ['Freq_Iso_Off', 13, 17],\n",
-       " ['eFG%_Iso_Off', 13, 28],\n",
-       " ['Freq_OffScreen_Off', 87, -80],\n",
-       " ['eFG%_OffScreen_Off', 85, -63],\n",
-       " ['Freq_P&R_Handler_Off', 49, -18],\n",
-       " ['eFG%_P&R_Handler_Off', 94, -65],\n",
-       " ['Freq_P&R_Man_Off', 69, 13],\n",
-       " ['eFG%_P&R_Man_Off', 75, -8],\n",
-       " ['Freq_Postup_Off', 13, 10],\n",
-       " ['eFG%_Postup_Off', 13, 22],\n",
-       " ['Freq_Putbacks_Off', 38, -4],\n",
+       "[['%AST', 48, -16],\n",
+       " ['%OREB', 68, -32],\n",
+       " ['%DREB', 32, 6],\n",
+       " ['%STL', 89, -5],\n",
+       " ['%BLK', 51, -43],\n",
+       " ['FREQ_6', 29, 26],\n",
+       " ['Diff%_6', 28, 4],\n",
+       " ['FREQ_15', 52, 35],\n",
+       " ['Diff%_15', 82, -9],\n",
+       " ['Freq_Handoff_Off', 49, 13],\n",
+       " ['eFG%_Handoff_Off', 37, 18],\n",
+       " ['Freq_Iso_Def', 53, 0],\n",
+       " ['eFG%_Iso_Def', 34, 3],\n",
+       " ['Freq_Iso_Off', 2, 28],\n",
+       " ['eFG%_Iso_Off', 2, 39],\n",
+       " ['Freq_OffScreen_Off', 18, -11],\n",
+       " ['eFG%_OffScreen_Off', 14, 8],\n",
+       " ['Freq_P&R_Handler_Off', 44, -13],\n",
+       " ['eFG%_P&R_Handler_Off', 43, -14],\n",
+       " ['Freq_P&R_Man_Off', 24, 58],\n",
+       " ['eFG%_P&R_Man_Off', 14, 53],\n",
+       " ['Freq_Postup_Off', 3, 20],\n",
+       " ['eFG%_Postup_Off', 3, 32],\n",
+       " ['Freq_Putbacks_Off', 58, -24],\n",
        " ['eFG%_Putbacks_Off', 39, 8],\n",
-       " ['Freq_Spotup_Off', 95, -7],\n",
-       " ['eFG%_Spotup_Off', 67, -8],\n",
-       " ['Freq_Tight', 8, 16],\n",
-       " ['eFG%_Tight', 14, 17],\n",
-       " ['Freq_Open', 93, 1],\n",
+       " ['Freq_Spotup_Off', 83, 5],\n",
+       " ['eFG%_Spotup_Off', 42, 17],\n",
+       " ['Freq_Tight', 39, -15],\n",
+       " ['eFG%_Tight', 66, -35],\n",
+       " ['Freq_Open', 31, 63],\n",
        " ['eFG%_Open', 56, 5],\n",
-       " ['FGA_Catch_And_Shoot', 93, -17],\n",
-       " ['EFG%_Catch_And_Shoot', 54, 8],\n",
-       " ['FGA_Pull_Up', 60, -39],\n",
-       " ['EFG%_Pull_Up', 51, -18],\n",
-       " ['DRIVES_Drives', 31, 10],\n",
-       " ['FG%_Drives', 86, -49]]"
+       " ['FGA_Catch_And_Shoot', 19, 57],\n",
+       " ['EFG%_Catch_And_Shoot', 56, 6],\n",
+       " ['FGA_Pull_Up', 32, -11],\n",
+       " ['EFG%_Pull_Up', 33, 0],\n",
+       " ['DRIVES_Drives', 40, 1],\n",
+       " ['FG%_Drives', 32, 5]]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +428,7 @@
     "similarity_score_5 = dict(sorted(similarity_score.items(), key = itemgetter(1))[:K])\n",
     "print(similarity_score_5)\n",
     "print('')\n",
-    "the_master_dic['Jae Crowder']\n",
+    "the_master_dic['Josh Green']\n",
     "\n",
     "\n"
    ]
