--- a/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/dictionary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -268,46 +268,46 @@
     {
      "data": {
       "text/plain": [
-       "[['%AST', 25, 15],\n",
-       " ['%OREB', 46, -19],\n",
-       " ['%DREB', 15, 8],\n",
-       " ['%STL', 50, 21],\n",
-       " ['%BLK', 46, -41],\n",
-       " ['FREQ_6', 51, 14],\n",
-       " ['Diff%_6', 32, 3],\n",
-       " ['FREQ_15', 54, 21],\n",
-       " ['Diff%_15', 58, -3],\n",
-       " ['Freq_Handoff_Off', 48, 27],\n",
-       " ['eFG%_Handoff_Off', 88, -29],\n",
-       " ['Freq_Iso_Def', 33, 34],\n",
-       " ['eFG%_Iso_Def', 50, -4],\n",
-       " ['Freq_Iso_Off', 43, -28],\n",
-       " ['eFG%_Iso_Off', 44, -19],\n",
-       " ['Freq_OffScreen_Off', 90, -88],\n",
-       " ['eFG%_OffScreen_Off', 70, -55],\n",
+       "[['%AST', 25, 40],\n",
+       " ['%OREB', 46, -6],\n",
+       " ['%DREB', 15, 20],\n",
+       " ['%STL', 50, -35],\n",
+       " ['%BLK', 46, -16],\n",
+       " ['FREQ_6', 51, -1],\n",
+       " ['Diff%_6', 32, 38],\n",
+       " ['FREQ_15', 54, -19],\n",
+       " ['Diff%_15', 58, -33],\n",
+       " ['Freq_Handoff_Off', 48, -8],\n",
+       " ['eFG%_Handoff_Off', 88, -28],\n",
+       " ['Freq_Iso_Def', 33, 27],\n",
+       " ['eFG%_Iso_Def', 50, 20],\n",
+       " ['Freq_Iso_Off', 43, -8],\n",
+       " ['eFG%_Iso_Off', 44, 6],\n",
+       " ['Freq_OffScreen_Off', 90, -70],\n",
+       " ['eFG%_OffScreen_Off', 70, -10],\n",
        " ['Freq_P&R_Handler_Off', 48, -18],\n",
-       " ['eFG%_P&R_Handler_Off', 93, -68],\n",
-       " ['Freq_P&R_Man_Off', 65, 22],\n",
-       " ['eFG%_P&R_Man_Off', 97, -28],\n",
-       " ['Freq_Postup_Off', 67, -55],\n",
-       " ['eFG%_Postup_Off', 99, -75],\n",
-       " ['Freq_Putbacks_Off', 55, -47],\n",
+       " ['eFG%_P&R_Handler_Off', 93, -33],\n",
+       " ['Freq_P&R_Man_Off', 65, -45],\n",
+       " ['eFG%_P&R_Man_Off', 97, -77],\n",
+       " ['Freq_Postup_Off', 67, -52],\n",
+       " ['eFG%_Postup_Off', 99, -59],\n",
+       " ['Freq_Putbacks_Off', 55, -45],\n",
        " ['eFG%_Putbacks_Off', 40, -10],\n",
-       " ['Freq_Spotup_Off', 81, -11],\n",
-       " ['eFG%_Spotup_Off', 72, -17],\n",
-       " ['Freq_Tight', 36, -21],\n",
-       " ['eFG%_Tight', 89, -79],\n",
-       " ['Freq_Open', 77, 8],\n",
-       " ['eFG%_Open', 76, -14],\n",
-       " ['FGA_Catch_And_Shoot', 73, -8],\n",
-       " ['EFG%_Catch_And_Shoot', 67, -17],\n",
-       " ['FGA_Pull_Up', 70, -45],\n",
-       " ['EFG%_Pull_Up', 81, -61],\n",
-       " ['DRIVES_Drives', 64, -19],\n",
-       " ['FG%_Drives', 92, -52]]"
+       " ['Freq_Spotup_Off', 81, -46],\n",
+       " ['eFG%_Spotup_Off', 72, -22],\n",
+       " ['Freq_Tight', 36, 34],\n",
+       " ['eFG%_Tight', 89, -14],\n",
+       " ['Freq_Open', 77, -57],\n",
+       " ['eFG%_Open', 76, -36],\n",
+       " ['FGA_Catch_And_Shoot', 73, -43],\n",
+       " ['EFG%_Catch_And_Shoot', 67, -22],\n",
+       " ['FGA_Pull_Up', 70, 5],\n",
+       " ['EFG%_Pull_Up', 81, -16],\n",
+       " ['DRIVES_Drives', 64, 16],\n",
+       " ['FG%_Drives', 92, -22]]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,60 +333,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Jevon Carter': 21, 'Jae Crowder': 22, 'Josh Green': 22, 'Reggie Bullock': 22, 'Robert Covington': 22, 'Dean Wade': 23, 'Frank Jackson': 23, 'Frank Ntilikina': 23, 'Justin Holiday': 23, \"Royce O'Neale\": 23}\n",
+      "{'Cameron Payne': 18, 'Shake Milton': 19, 'Terance Mann': 19, 'Lonnie Walker IV': 20, 'Caris LeVert': 21, 'Davion Mitchell': 21, 'Ja Morant': 21, 'Spencer Dinwiddie': 21, 'Cory Joseph': 22, 'Dennis Schroder': 22}\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[['%AST', 82, -42],\n",
-       " ['%OREB', 2, 25],\n",
-       " ['%DREB', 23, 0],\n",
-       " ['%STL', 20, 51],\n",
-       " ['%BLK', 5, 0],\n",
-       " ['FREQ_6', 5, 60],\n",
-       " ['Diff%_6', 2, 33],\n",
-       " ['FREQ_15', 92, -17],\n",
-       " ['Diff%_15', 47, 8],\n",
-       " ['Freq_Handoff_Off', 87, -12],\n",
-       " ['eFG%_Handoff_Off', 68, -9],\n",
-       " ['Freq_Iso_Def', 26, 41],\n",
-       " ['eFG%_Iso_Def', 89, -43],\n",
-       " ['Freq_Iso_Off', 1, 14],\n",
-       " ['eFG%_Iso_Off', 1, 24],\n",
-       " ['Freq_OffScreen_Off', 93, -91],\n",
-       " ['eFG%_OffScreen_Off', 79, -64],\n",
+       "[['%AST', 82, -17],\n",
+       " ['%OREB', 2, 38],\n",
+       " ['%DREB', 23, 12],\n",
+       " ['%STL', 20, -5],\n",
+       " ['%BLK', 5, 25],\n",
+       " ['FREQ_6', 5, 45],\n",
+       " ['Diff%_6', 2, 68],\n",
+       " ['FREQ_15', 92, -57],\n",
+       " ['Diff%_15', 47, -22],\n",
+       " ['Freq_Handoff_Off', 87, -47],\n",
+       " ['eFG%_Handoff_Off', 68, -8],\n",
+       " ['Freq_Iso_Def', 26, 34],\n",
+       " ['eFG%_Iso_Def', 89, -19],\n",
+       " ['Freq_Iso_Off', 1, 34],\n",
+       " ['eFG%_Iso_Off', 1, 49],\n",
+       " ['Freq_OffScreen_Off', 93, -73],\n",
+       " ['eFG%_OffScreen_Off', 79, -19],\n",
        " ['Freq_P&R_Handler_Off', 81, -51],\n",
-       " ['eFG%_P&R_Handler_Off', 98, -73],\n",
-       " ['Freq_P&R_Man_Off', 21, 66],\n",
-       " ['eFG%_P&R_Man_Off', 5, 64],\n",
-       " ['Freq_Postup_Off', 4, 8],\n",
-       " ['eFG%_Postup_Off', 0, 24],\n",
-       " ['Freq_Putbacks_Off', 14, -6],\n",
+       " ['eFG%_P&R_Handler_Off', 98, -38],\n",
+       " ['Freq_P&R_Man_Off', 21, -1],\n",
+       " ['eFG%_P&R_Man_Off', 5, 15],\n",
+       " ['Freq_Postup_Off', 4, 11],\n",
+       " ['eFG%_Postup_Off', 0, 40],\n",
+       " ['Freq_Putbacks_Off', 14, -4],\n",
        " ['eFG%_Putbacks_Off', 14, 16],\n",
-       " ['Freq_Spotup_Off', 71, -1],\n",
-       " ['eFG%_Spotup_Off', 47, 8],\n",
-       " ['Freq_Tight', 5, 10],\n",
-       " ['eFG%_Tight', 81, -71],\n",
-       " ['Freq_Open', 74, 11],\n",
-       " ['eFG%_Open', 38, 24],\n",
-       " ['FGA_Catch_And_Shoot', 67, -2],\n",
-       " ['EFG%_Catch_And_Shoot', 54, -4],\n",
-       " ['FGA_Pull_Up', 60, -35],\n",
-       " ['EFG%_Pull_Up', 62, -42],\n",
-       " ['DRIVES_Drives', 60, -15],\n",
-       " ['FG%_Drives', 96, -56]]"
+       " ['Freq_Spotup_Off', 71, -36],\n",
+       " ['eFG%_Spotup_Off', 47, 3],\n",
+       " ['Freq_Tight', 5, 65],\n",
+       " ['eFG%_Tight', 81, -6],\n",
+       " ['Freq_Open', 74, -54],\n",
+       " ['eFG%_Open', 38, 2],\n",
+       " ['FGA_Catch_And_Shoot', 67, -37],\n",
+       " ['EFG%_Catch_And_Shoot', 54, -9],\n",
+       " ['FGA_Pull_Up', 60, 15],\n",
+       " ['EFG%_Pull_Up', 62, 3],\n",
+       " ['DRIVES_Drives', 60, 20],\n",
+       " ['FG%_Drives', 96, -26]]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.3"
   },
   "orig_nbformat": 4
  },
