--- a/Pickup_Comps_Inner/Dataframes/final_python.ipynb
+++ b/Pickup_Comps_Inner/Dataframes/final_python.ipynb
@@ -190,15 +190,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['Height', 72], ['%AST', 83], ['%OREB', 38], ['%DREB', 17], ['%STL', 90], ['%BLK', 17], ['FREQ_6', 18], ['Diff%_6', 61], ['FREQ_15', 86], ['Diff%_15', 66], ['Freq_Handoff_Off', 73], ['eFG%_Handoff_Off', 87], ['Freq_Iso_Def', 5], ['eFG%_Iso_Def', 5], ['Freq_Iso_Off', 79], ['eFG%_Iso_Off', 78], ['Freq_OffScreen_Off', 25], ['eFG%_OffScreen_Off', 25], ['Freq_P&R_Handler_Off', 84], ['eFG%_P&R_Handler_Off', 67], ['Freq_P&R_Man_Off', 24], ['eFG%_P&R_Man_Off', 24], ['Freq_Postup_Off', 32], ['eFG%_Postup_Off', 32], ['Freq_Putbacks_Off', 13], ['eFG%_Putbacks_Off', 13], ['Freq_Spotup_Off', 68], ['eFG%_Spotup_Off', 53], ['Freq_Tight', 74], ['eFG%_Tight', 33], ['Freq_Open', 31], ['eFG%_Open', 13], ['FGA_Catch_And_Shoot', 21], ['EFG%_Catch_And_Shoot', 46], ['FGA_Pull_Up', 55], ['EFG%_Pull_Up', 70], ['DRIVES_Drives', 77], ['FG%_Drives', 44]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[['Height', 78],\n",
+       " ['%AST', 81],\n",
+       " ['%OREB', 36],\n",
+       " ['%DREB', 49],\n",
+       " ['%STL', 36],\n",
+       " ['%BLK', 29],\n",
+       " ['FREQ_6', 88],\n",
+       " ['Diff%_6', 31],\n",
+       " ['FREQ_15', 25],\n",
+       " ['Diff%_15', 40],\n",
+       " ['Freq_Handoff_Off', 50],\n",
+       " ['eFG%_Handoff_Off', 88],\n",
+       " ['Freq_Iso_Def', 23],\n",
+       " ['eFG%_Iso_Def', 53],\n",
+       " ['Freq_Iso_Off', 97],\n",
+       " ['eFG%_Iso_Off', 88],\n",
+       " ['Freq_OffScreen_Off', 75],\n",
+       " ['eFG%_OffScreen_Off', 70],\n",
+       " ['Freq_P&R_Handler_Off', 97],\n",
+       " ['eFG%_P&R_Handler_Off', 83],\n",
+       " ['Freq_P&R_Man_Off', 24],\n",
+       " ['eFG%_P&R_Man_Off', 24],\n",
+       " ['Freq_Postup_Off', 81],\n",
+       " ['eFG%_Postup_Off', 84],\n",
+       " ['Freq_Putbacks_Off', 32],\n",
+       " ['eFG%_Putbacks_Off', 83],\n",
+       " ['Freq_Spotup_Off', 25],\n",
+       " ['eFG%_Spotup_Off', 55],\n",
+       " ['Freq_Tight', 92],\n",
+       " ['eFG%_Tight', 51],\n",
+       " ['Freq_Open', 54],\n",
+       " ['eFG%_Open', 44],\n",
+       " ['FGA_Catch_And_Shoot', 52],\n",
+       " ['EFG%_Catch_And_Shoot', 37],\n",
+       " ['FGA_Pull_Up', 100],\n",
+       " ['EFG%_Pull_Up', 82],\n",
+       " ['DRIVES_Drives', 97],\n",
+       " ['FG%_Drives', 84]]"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -216,7 +256,8 @@
     "            the_master_dic[str(df['Player'].iloc[i])].append([headers[j], round((i/350)*100)])\n",
     "        else:\n",
     "            the_master_dic[str(basketball['Player'].iloc[i])] = []\n",
-    "            the_master_dic[str(basketball['Player'].iloc[i])].append([headers[j], int(float(basketball['Height'].iloc[i]))])\n"
+    "            the_master_dic[str(basketball['Player'].iloc[i])].append([headers[j], int(float(basketball['Height'].iloc[i]))])\n",
+    "\n"
    ]
   },
   {
